# short-video-generator

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: crawl-codebase.md  create-branch-summary.md  eval-skill.md  reassess-plan.md  review-pr.md  session-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/requirements/: ViralForge_ClaudeCode_Prompt.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  FEATURES_LANDING_PAGE.md  PITFALLS.md  STACK.md  SUMMARY.md  ai-providers-deep-dive.md  imagen-api-capabilities.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_trend_intelligence_schema.py  003_content_generation_schema.py  004_waitlist_schema.py  005_landing_pages_schema.py  006_ugcjob_schema.py  007_lp_integration_schema.py  014_trim_history.py  (+8 more)
app/: __init__.py  config.py  database.py  main.py  models.py  pipeline.py  schemas.py  tasks.py  ugc_router.py  ugc_tasks.py  worker.py
config/: sample-data.yml
scripts/: edit_lp_section.py  generate_landing_page.py  run_ugc_pipeline.py  validate-docker.sh
(+272 files in other folders)
